test/files/neg/macro-override-macro-overrides-abstract-method-a.check
Impls_Macros_1.scala:12: error: overriding method foo in trait Foo of type (x: Int)Int;
 macro method foo cannot be used here - term macros cannot override abstract methods
  def foo(x: Int): Int = macro Impls.impl
      ^
one error found
